# project_test

./: .gitignore  README.md  data.dvc  evaluate.dockerfile  main.py  notas.txt  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_cookie.json  post_create.sh
.dvc/: config
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/project_etest/: train.py
src/project_test/: data.py  evaluate.py  train.py  visualize.py
tests/: test_data.py
